# suckless-utils

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  test.sh
config/: README.md  bashrc
config/broot/: conf.hjson
config/broot/launcher/bash/: br
config/cava/: config
config/config/: picom.conf
config/config/spmenu/run/: config
config/config/wal/templates/: dunstrc
config/dunst/: dunstrc
config/eww/: README  colors.scss  eww.scss  eww.yuck
config/jgmenu/: jgmenurc
config/ncmpcpp/: config
config/neofetch/: ascii  config.conf
config/newsboat/: config  urls
config/screenshot-spmenu/: screenshotrc
config/spmenu/: spmenu.conf
config/vis/: config
config/vis/colors/: pywal
config/wal/colorschemes/dark/: material-you-blue.json
config/wal/templates/: colors.Xresources  dunstrc  jgmenurc  slim-reload  slim.theme  vis
config/wal/wal/colorschemes/: colors.json
config/wal/wal/colorschemes/dark/: base16-oxocarbon.json
config/wal/wal/templates/: cava-config
config/wallpaper-spmenu/: wallpaperrc
desktop/: startdwm
dmenu/: .gitignore  config.def.h  config.def.h.orig  config.h  config.mk  dmenu  dmenu.c  dmenu.c.orig  dmenu.c.rej  stest
dmenu-flexipatch/: config.def.h  patches.def.h
dmenu/patches/: dmenu-alpha.diff
dmenu/scripts/: dboard  dcalc  dfmpeg  shutdown.sh
dwm/: .gitignore  config.def.h  config.def.h.bak  config.def.h.orig  config.def.h.rej  config.h  config.mk  drw.c  dwm  dwm.1  dwm.c  dwm.c.rej  layoutmenu.sh  layouts.c
dwm-flexipatch/: '  .dwm.c.kate-swp  Makefile  config.def.h  config.def.h~  config.mk  dwm-flexipatch.tar.xz  dwm.c  dwm.desktop  patches.def.h  startdwm
dwm-flexipatch/patch/: bar_dockbutton.c  bar_dockbutton.h  bar_flexwintitle.c  bar_powerbutton.c  bar_powerbutton.h  bar_statusbutton.c  bar_statusbutton.h  bar_systray.c  bar_taglabels.c  bar_wincontrolbutton.c  bar_wincontrolbutton.h  include.c  include.h  layout_deck.c  layoutmenu.sh  renamed_scratchpads.c  xrdb.c
dwm/patches/: dwm-alpha.diff  dwm-steam.diff  dwm-systray-status2d-statuscmd-6.4.diff  dwm-windowfollow-6.3.diff  suckless-utils-dwm-6.4-togglewin-bind.diff
dwmblocks-async/: Makefile  README.md  config.c  config.h
nsxiv/: config.def.h  config.mk
nsxiv/etc/: nsxiv.desktop
scripts/: README.md  adelle-theme  layoutmenu  shutdown  tabb
scripts/dunst/: Makefile  volume-dunst
scripts/dwmblocks/: sb-date  sb-forecast  sb-loadavg  sb-memory  sb-music  sb-user
scripts/eww/: eww-album  eww-artist  eww-music  messages.txt  quoter
scripts/shmenu/: shmenu_run
scripts/spmenu/: layoutmenu  shutdown  spboard
slim/: CMakeLists.txt  ChangeLog  Ck.cpp  Ck.h  INSTALL  PAM.cpp  PAM.h  README  THEMES  TODO  app.cpp  app.h  cfg.cpp  cfg.h  const.h  image.cpp  image.h  jpeg.c  log.cpp  log.h  main.cpp  numlock.cpp  numlock.h  panel.cpp  panel.h  png.c  slim.1  slim.conf  slim.service  slimlock.1  slimlock.cpp  switchuser.cpp  switchuser.h  util.cpp  util.h  xinitrc.sample
slim/themes/: CMakeLists.txt
slim/themes/default/: COPYRIGHT.background  COPYRIGHT.panel  slim.theme
slim/themes/original/: CMakeLists.txt
slim/themes/suckless/: slim.theme
slock-flexipatch/: config.def.h  config.mk  patches.def.h
slstatus/: .gitignore  config.def.h  config.h  slstatus
st/: .gitignore  config.def.h  config.h  config.mk  slstatus  st  st-autocomplete  st.1  st.c  st.h  x.c  x.c.orig
st-flexipatch/: Makefile  ]  config.def.h  config.h  config.mk  patches.def.h  patches.h  st
st/patches/: st-autocomplete-20211218-131244-st-0.8.4-testrelease.diff  st-fullscreen-0.8.5.diff  st-newterm.diff  st-scrollback1.diff
tabbed/: .gitignore  config.def.h  config.h  config.mk  tabbed  tabbed.c  xembed
tabbed-flexipatch/: Makefile  config.def.h  patches.def.h  tabbed.c
tabbed-flexipatch/patch/: drag.c  include.c  include.h
